# Turing-Complete-Circuit-Simulator

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  prototype_list.nim  save_loader.rs  save_parser.rs  simulator.rs  versions.rs
src/versions/: v0.rs  v1.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs
test/resources/: 5-bit-decoder.data
test/resources/byte_adder/: standard-ripple-carry.data
test/resources/byte_adder/decomposed-ripple-switch-carry/: circuit.data
