[package]
name = "tc_simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-ordinalize = "3.1.13"
once_cell = "1.17.1"
tetsy-snappy = "0.1.0"
argparse = "0.2.2"
rand = "0.8.5"
dirs = "5.0.1"
walkdir = "2.3.3"
derivative = "2.2.0"